# Outflow

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.account.config.js  playwright.browser-compatibility.config.js  playwright.config.js  playwright.deployment.config.js  playwright.pwa.config.js  playwright.staging-sync.config.js  tailwind.config.js  vite.config.js
config/: github-environments.json
docs/: accessibility-acceptance.md  accessibility.md  account-data-export.md  android-release.md  beta-access.md  browser-compatibility.md  calendar-export.md  closed-beta.md  cloud-sync.md  csv-format.md  device-alerts.md  email-reminders.md  free-core.md  github-environment-readiness.md  hosted-calendar-feeds.md  installable-web.md  integrations.md  internal-calendar.md  ios-release.md  ledger-backup.md  local-workspace.md  macos-release.md  maintenance-mode.md  native-desktop.md  native-mobile.md  native-store-disclosures.md  optional-account-onboarding.md  outflow-api.openapi.yaml  privacy-policy.md  pro-billing.md  release-versioning.md  reminder-operations.md  service-architecture.md  service-provisioning.md  shared-ledgers.md  web-security.md
mcp/: outflow-mcp.mjs
prds/: outflow-product-vision.md
public/: manifest.webmanifest
scripts/: build-ios-release.mjs  (+30 more)
src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: main-macos-updater.json  main-notifications.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+120 files in other folders)
