[package]
name = "outflow"
version = "0.1.0"
description = "A private, local-first subscription tracker"
authors = ["Outflow contributors"]
repository = "https://github.com/thedudeb/Outflow"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "outflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-notification = "=2.3.3"

[target.'cfg(target_os = "macos")'.dependencies]
serde_json = "=1.0.150"
tauri-plugin-process = "=2.3.1"
tauri-plugin-updater = "=2.10.1"
